Styled profile photo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,3 +29,15 @@ nav a {
     font-weight: bold;
 }
 
+.profile {
+    text-align: center;
+    padding: 20px;
+}
+
+.profile img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
