--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,4 +184,57 @@ clients img {
     display: inline-block;
 }
 
+/* CONTACT */
+
+.contact {
+    padding: 40px 20px;
+}
+
+.contact h2 {
+    color: #ff7a00;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+form {
+    max-width: 400px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+input,
+textarea {
+    padding: 10px;
+    border: none;
+    font-size: 14px;
+}
+
+input::placeholder,
+textarea::placeholder {
+    color: #888;
+}
+
+textarea {
+resize: none;
+}
+
+button {
+    padding: 10px;
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #fff;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+button:hover {
+    background-color: #FF7C00;
+    color: #000;
+    border-color: #FF7C00;
+}
+
+
 
