--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
 /* Global styles */
 
+html {
+    scroll-behavior: smooth;
+  }
+  
+
 body {
   font-family: "Montserrant", sans-serif;
   background-color: #1a1a1a;
@@ -260,4 +265,112 @@ footer img {
 
 footer img:hover {
   filter: grayscale(0%);
+}
+
+
+
+/* Medium Screens (Tablets & small laptops) */
+
+@media (max-width: 1024px) {
+  .profile,
+  .skills,
+  .accomplishments,
+  .clients,
+  .contact,
+  .quote {
+    margin: 60px 20px;
+    padding: 30px 10px;
+  }
+
+  .accomplishments table th,
+  .accomplishments table td {
+    padding: 10px 40px;
+  }
+
+  footer {
+    gap: 80px;
+  }
+}
+
+/* Small Screens (Phones) */
+
+@media (max-width: 768px) {
+  nav {
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 20px 10px;
+  }
+
+  header img.logo {
+    max-width: 100px;
+  }
+
+  .profile img {
+    width: 150px;
+    height: 150px;
+  }
+
+  h1 {
+    font-size: 1.2rem;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  .skills img {
+    width: 60px;
+    margin: 10px;
+  }
+
+  .clients div {
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    gap: 20px;
+  }
+
+  .accomplishments table th,
+  .accomplishments table td {
+    padding: 10px 20px;
+  }
+
+  form {
+    width: 90%;
+  }
+
+  footer {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin: 60px 0;
+  }
+
+  footer img {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+/* Extra Small Screens (Very narrow phones) */
+
+@media (max-width: 480px) {
+  .profile p,
+  .skills p,
+  .clients p,
+  .accomplishments p,
+  .quote,
+  .contact p {
+    font-size: 12px;
+  }
+
+  nav a {
+    font-size: 12px;
+  }
+
+  button {
+    font-size: 12px;
+  }
+
+  .clients div {
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  }
 }
