--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ h2 {
   margin-top: 40px;
 }
 
-/* SILLS */
+/* SKILLS */
 
 .skills {
   background-color: #1a1a1a;
@@ -266,6 +266,42 @@ footer img {
 footer img:hover {
   filter: grayscale(0%);
 }
+
+/* GALLERY */
+
+h2 {
+    font-size: 24px;
+    margin: 40px 0 20px;
+    color: #ff9900;
+    font-weight: 800;
+  }
+
+.gallery-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 0px;
+    padding: 20px 40px;
+    max-width: 1600px;
+    margin: 0 auto 80px;
+}
+
+.gallery-grid img {
+    width: 100%;
+    height: auto;
+    border-radius: px;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.gallery-grid img:hover {
+    transform: scale(1.03);
+    box-shadow: 0 6px 20px rgba(255, 255, 255, 0.4)
+}
+
+
+
+
+
+
 
 
 
