--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,13 +158,15 @@ h2 {
 
 .clients div {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 40px;
   align-items: center;
   justify-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-clients img {
+.clients img {
   max-width: 100%;
   max-height: 100px;
   object-fit: contain;
