Slightly tweaked color on button.hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,7 +231,7 @@ nav a:hover {
   padding: 0;
   margin: -1px;
   overflow: hidden;
-  clip: rect(0, 0, 0, 0);
+  clip-path: inset(50%);
   white-space: nowrap;
   border: 0;
 }
@@ -273,7 +273,7 @@ button {
 button:hover {
   background-color: #ff7c00;
   color: #000;
-  border-color: #ff7c00;
+  border-color: #e56e00;
 }
 
 /* ================= FOOTER ================= */
